# OS_kolok1

./: ANSWER_GENERAL.md  ANSWER_VAR2.md  README.md
.github/workflows/: cpp-ci.yml
src/: CMakeLists.txt  fibonacci.cpp  fibonacci.hpp  linkedlist.cpp  linkedlist.hpp  main_test.cpp  palindrome.cpp  palindrome.hpp
